--- a/build.gradle
+++ b/build.gradle
@@ -12,7 +12,23 @@ repositories {
     mavenCentral()
 }
 
+//for Junit 5
+test{
+    useJUnitPlatform()
+}
+
 dependencies {
+    //Spring boot
     implementation 'org.springframework.boot:spring-boot-starter-web'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+
+    //Lombok
+    implementation('org.projectlombok:lombok')
+    annotationProcessor('org.projectlombok:lombok')
+    testImplementation('org.projectlombok:lombok')
+    testAnnotationProcessor('org.projectlombok:lombok')
+
+    //JPA
+    implementation('org.springframework.boot:spring-boot-starter-data-jpa')
+    implementation('com.h2database:h2')
 }
