--- a/build.gradle
+++ b/build.gradle
@@ -31,4 +31,7 @@ dependencies {
     //JPA
     implementation('org.springframework.boot:spring-boot-starter-data-jpa')
     implementation('com.h2database:h2')
+
+    //Mustache
+    implementation('org.springframework.boot:spring-boot-starter-mustache')
 }
